index.html updated

--- a/index.html
+++ b/index.html
@@ -5,5 +5,30 @@
 </head>
   <body>
     <h1>Hello World</h1>
+      <p>
+        Let's do work! <a href="http://inputidea.com">input[idea]</a>
+      </p>
+<!-- 
+    Multiple Select Lines = Command + Click
+    Select a particular column by = Option + Click + Drag
+    http://docs.emmet.io/cheat-sheet/ = shortcuts for text code writing / creating, etc...
+-->
+      <ul>
+          <li>alsjfkjshfd</li>
+          <li>aksjdaksjdkasjd</li>
+          <li>asjdlasjdlk</li>
+          <li>aslkdjlasjdlasjdlasldj</li>
+          <li>alksjdlkasjdlkajsldjalsjdlka</li>
+      </ul>
+<!-- UTILIZE ul>li*6 to get a ready made li qty built -->
+      <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+      </ul>
+      
   </body>
 </html>
