changed README and index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </ul>
 <!-- UTILIZE ul>li*6 to get a ready made li qty built -->
       <ul>
-          <li></li>
+          <li>another change!</li>
           <li></li>
           <li></li>
           <li></li>
